narrow grid and fix belief alignment

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -53,7 +53,7 @@ header[role="banner"] {
     background: none repeat scroll 0 0 $dark_magento;
     height: 88px;
     width: 100%;
-    padding: 0 10px;
+    padding: 0 15px;
     .header-container {
          @include outer-container;
 
@@ -196,19 +196,23 @@ footer {
 
      .who-are-we{
           @include breakpoint($mobile) {
-            @include span-columns(4);
+              @include span-columns(10);
+              @include shift(1);
           }
           @include breakpoint($desktop) {
-            @include span-columns(6);
+            @include span-columns(5);
+            @include shift(1);
           }
      }
      .collaboration{
           @include breakpoint($mobile) {
-            @include span-columns(4);
-            @include omega;
+              @include span-columns(10);
+              @include shift(1);
+            
           }
           @include breakpoint($desktop) {
-            @include span-columns(6);
+            @include span-columns(5);
+            
             @include omega;
 
           }
@@ -217,19 +221,23 @@ footer {
 
      .build-with-care{
           @include breakpoint($mobile) {
-            @include span-columns(4);
+                @include span-columns(10);
+                @include shift(1);
           }
           @include breakpoint($desktop) {
-            @include span-columns(6);
+            @include span-columns(5);
+            @include shift(1);
           }
 
      }
      .guidance{
           @include breakpoint($mobile) {
-            @include span-columns(4);
+              @include span-columns(10);
+              @include shift(1);
           }
           @include breakpoint($desktop) {
-            @include span-columns(6);
+            @include span-columns(5);
+            @include omega;
           }
 
      }
@@ -240,8 +248,8 @@ footer {
      @include outer-container;
      .work{
          padding-top:45px;
-         @include span-columns(6);
-         @include shift(3);
+         @include span-columns(10);
+         @include shift(1);
          text-align:center;
      }
 }
@@ -250,7 +258,8 @@ footer {
      @include outer-container;
      .clients{
          padding-top:25px;
-         @include span-columns(12);
+         @include span-columns(10);
+         @include shift(1);
          text-align:center;
      }
 
@@ -269,6 +278,7 @@ footer {
      .belief {
          padding-top:45px;
          @include span-columns(10);
+         @include shift(1);
 
          .intro {
              text-align: center;
@@ -298,7 +308,8 @@ footer {
      .twitter-contact {
          padding-top:60px;
          @include breakpoint($mobile) {
-            @include span-columns(4);
+            @include span-columns(10);
+            @include shift(1);
           }
           @include breakpoint($desktop) {
             @include span-columns(4);
@@ -310,7 +321,8 @@ footer {
      }
       .mail-contact {
           @include breakpoint($mobile) {
-            @include span-columns(4);
+            @include span-columns(10);
+            @include shift(1);
           }
           @include breakpoint($desktop) {
             @include span-columns(4);
